# coin

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_hyperquantum.sh
scripts/: run_Coin.sh  run_hyperquantum.sh
src/: __init__.py  main.py
src/core/: crypto.py  cuda.py
src/database/: manager.py
src/optimizer/: process.py  system.py
tests/: __init__.py  conftest.py  test_crypto.py  test_cuda.py  test_database.py  test_optimizer.py
